[tool.poetry]
name = "octopus-api"
version = "1.0.1"
homepage = "https://github.com/FilipByren/octopus-api"
repository = "https://github.com/FilipByren/octopus-api"
readme = "README.md"
keywords = ["rate limiting", "concurrent api", "python", "https://docs.aiohttp.org"]
description = "Octopus-api is a python library for performing client-based optimized concurrent requests and limit rates set by the endpoint contract."
authors = ["Filip Byrén <filip.j.byren@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
more-itertools = "^8.11.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

# New scripts
[tool.poetry.scripts]
octopus = 'octopus:octopus'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
